# unique-chain

./: ..env.swp  .dockerignore  .editorconfig  .env  .env-parachain  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  .taplo.toml  Cargo.toml  Dockerfile  Dockerfile-chain-dev  Dockerfile-parachain  Dockerfile-parachain-v2  Dockerfile-production  Dockerfile-testnet  Dockerfile-tests  Dockerfile-unit  LICENSE  Makefile  README.md  ci_node.sh  deploy-testnet.sh  docker-compose-dev.yaml  docker-compose-production.yml  docker-compose-testnet.yml  docker-compose-tests-parachain.yml  docker-compose-tests.yml  docker-compose.yml  flake.nix  init.sh  launch-config-acala-unique.json  launch-config-full-karura.json  launch-config-full-moonbeam.json  launch-config-full-moonriver.json  launch-config-full.json  (+26 more)
client/local-maintenance/: Cargo.toml
client/local-maintenance/src/: inherent.rs  lib.rs  rpc.rs  shared.rs
client/rpc/: CHANGELOG.md  Cargo.toml
client/rpc/src/: lib.rs  pov_estimate.rs
common-types/: Cargo.toml
common-types/src/: lib.rs
crates/evm-coder/: CHANGELOG.md  Cargo.toml  README.md
crates/evm-coder/procedural/: Cargo.toml
crates/evm-coder/src/: abi.rs  custom_signature.rs  events.rs  execution.rs  lib.rs  solidity.rs
crates/evm-coder/tests/: a.rs  abi_derive_generation.rs  conditional_is.rs  generics.rs  log.rs  random.rs  solidity_generation.rs
node/: Cargo.toml
node/cli/: CHANGELOG.md  Cargo.toml  build.rs
node/cli/src/: chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  lib.rs  main.rs  rpc.rs  service.rs
node/rpc/: CHANGELOG.md  Cargo.toml
node/rpc/src/: lib.rs  lib.rs.exp
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/app-promotion/: CHANGELOG.md  Cargo.toml
pallets/app-promotion/src/: benchmarking.rs  lib.rs  tests.rs  types.rs  weights.rs
pallets/balances-adapter/: Cargo.toml
pallets/balances-adapter/src/: common.rs  erc.rs  lib.rs
pallets/collator-selection/: CHANGELOG.md  Cargo.toml
pallets/collator-selection/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/common/: CHANGELOG.MD  CHANGELOG.md  Cargo.toml
pallets/common/src/: account.rs  benchmarking.rs  dispatch.rs  erc.rs  eth.rs  helpers.rs  lib.rs  mock.rs  weights.rs
pallets/configuration/: CHANGELOG.md  Cargo.toml
pallets/configuration/src/: benchmarking.rs  lib.rs  weights.rs
pallets/contract-helpers/: Cargo.toml
pallets/contract-helpers/src/: lib.rs
pallets/contracts/: Cargo.toml
pallets/contracts/common/: Cargo.toml
pallets/contracts/rpc/: Cargo.toml
pallets/contracts/src/: chain_extension.rs  exec.rs  gas.rs  lib.rs  migration.rs  rent.rs  schedule.rs  storage.rs  tests.rs  weights.rs
pallets/evm-coder-substrate/: CHANGELOG.md  Cargo.toml
pallets/evm-coder-substrate/procedural/: Cargo.toml
pallets/evm-coder-substrate/src/: benchmarking.rs  execution.rs  lib.rs
pallets/evm-collection/: Cargo.toml
pallets/evm-collection/src/: eth.rs  lib.rs
pallets/evm-contract-helpers/: CHANGELOG.md  Cargo.toml  README.md  exp.rs
pallets/evm-contract-helpers/src/: eth.rs  lib.rs
pallets/evm-migration/: CHANGELOG.md  Cargo.toml  README.md
pallets/evm-migration/src/: benchmarking.rs  lib.rs  weights.rs
pallets/evm-transaction-payment/: Cargo.toml  README.md
pallets/evm-transaction-payment/src/: lib.rs
pallets/foreign-assets/: Cargo.toml
pallets/foreign-assets/src/: benchmarking.rs  impl_fungibles.rs  lib.rs  weights.rs
pallets/foreing-assets/: Cargo.toml
pallets/foreing-assets/src/: impl_fungibles.rs  lib.rs  weights.rs
pallets/fungible/: CHANGELOG.md  Cargo.toml
pallets/fungible/src/: benchmarking.rs  common.rs  erc.rs  lib.rs  weights.rs
pallets/gov-origins/: Cargo.toml
pallets/gov-origins/src/: lib.rs
pallets/identity/: Cargo.toml
pallets/identity/src/: benchmarking.rs  lib.rs  tests.rs  types.rs  weights.rs
pallets/inflation/: Cargo.toml
pallets/inflation/src/: benchmarking.rs  lib.rs  tests.rs
pallets/maintenance/: Cargo.toml
pallets/maintenance/src/: benchmarking.rs  lib.rs  weights.rs
pallets/nft-charge-transaction/: Cargo.toml
pallets/nft-charge-transaction/src/: lib.rs
primitives/: Cargo.toml
primitives/app_promotion_rpc/: CHANGELOG.md  Cargo.toml
primitives/app_promotion_rpc/src/: lib.rs
primitives/common/: CHANGELOG.md  Cargo.toml
primitives/common/src/: constants.rs  lib.rs  types.rs
primitives/data-structs/: CHANGELOG.md  Cargo.toml  Changelog.md
primitives/data-structs/src/: bondrewd_codec.rs  bounded.rs  budget.rs  lib.rs  mapping.rs  migration.rs  rmrk.rs
primitives/evm-mapping/: Cargo.toml
primitives/evm-mapping/src/: lib.rs
primitives/nft/: Cargo.toml
primitives/nft/src/: lib.rs
primitives/pov-estimate-rpc/: Cargo.toml
primitives/pov-estimate-rpc/src/: lib.rs
primitives/rmrk-rpc/: CHANGELOG.md  Cargo.toml
primitives/rmrk-rpc/src/: lib.rs
primitives/rmrk-traits/: Cargo.toml
primitives/rmrk-traits/src/: base.rs  collection.rs  lib.rs  nft.rs  part.rs  property.rs  resource.rs  serialize.rs  theme.rs
primitives/rpc/: CHANGELOG.md  Cargo.toml
primitives/rpc/src/: lib.rs
primitives/sponsorship/: Cargo.toml
primitives/sponsorship/src/: lib.rs
primitives/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/common/: CHANGELOG.md  Cargo.toml  constants.rs  construct_runtime.rs  data_management.rs  dispatch.rs  identity.rs  instance.rs  maintenance.rs  mod.rs  runtime_apis.rs  scheduler.rs  sponsoring.rs  weights.rs  xcm.rs
runtime/common/config/: ethereum.rs  mod.rs  orml.rs  parachain.rs  sponsoring.rs  substrate.rs  test_pallets.rs  xcm.rs
runtime/common/construct_runtime/: mod.rs  util.rs
runtime/common/ethereum/: mod.rs  self_contained_call.rs  (+2 more)
runtime/opal/: CHANGELOG.md  Cargo.toml  build.rs
runtime/quartz/: CHANGELOG.md  Cargo.toml  build.rs
runtime/src/: chain_extension.rs  dispatch.rs  lib.rs  nft_weights.rs
runtime/tests/: CHANGELOG.md  Cargo.toml
runtime/unique/: CHANGELOG.md  Cargo.toml  build.rs  xcm_config.rs1
(+1590 files in other folders)
