[workspace]
default-members = ['client/*', 'node/*', 'runtime/opal']
members = [
	'client/*',
	'crates/*',
	'node/*',
	'pallets/*',
	'primitives/*',
	'runtime/opal',
	'runtime/quartz',
	'runtime/tests',
	'runtime/unique',
]
package.version = "1.16.0"
resolver = "2"

[profile.release]
# Runtime requires unwinding
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 3

[profile.integration-tests]
debug-assertions = true
inherits = "release"

[workspace.dependencies]
# Unique
app-promotion-rpc = { path = "primitives/app_promotion_rpc", default-features = false }
evm-coder = { version = "0.4.3", default-features = false, features = ['bondrewd'] }
pallet-app-promotion = { path = "pallets/app-promotion", default-features = false }
pallet-balances-adapter = { default-features = false, path = "pallets/balances-adapter" }
pallet-charge-transaction = { package = "pallet-template-transaction-payment", default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "v20241016" }
pallet-collator-selection = { default-features = false, path = "pallets/collator-selection" }
pallet-common = { default-features = false, path = "pallets/common" }
pallet-configuration = { default-features = false, path = "pallets/configuration" }
pallet-evm-coder-substrate = { default-features = false, path = "pallets/evm-coder-substrate" }
pallet-evm-contract-helpers = { path = "pallets/evm-contract-helpers", default-features = false }
pallet-evm-migration = { path = "pallets/evm-migration", default-features = false }
pallet-evm-transaction-payment = { path = "pallets/evm-transaction-payment", default-features = false }
pallet-foreign-assets = { default-features = false, path = "pallets/foreign-assets" }
pallet-fungible = { default-features = false, path = "pallets/fungible" }
pallet-gov-origins = { default-features = false, path = "pallets/gov-origins" }
pallet-identity = { default-features = false, path = "pallets/identity" }
pallet-inflation = { path = "pallets/inflation", default-features = false }
pallet-maintenance = { default-features = false, path = "pallets/maintenance" }
pallet-nonfungible = { default-features = false, path = "pallets/nonfungible" }
pallet-refungible = { default-features = false, path = "pallets/refungible" }
pallet-structure = { default-features = false, path = "pallets/structure" }
pallet-test-utils = { default-features = false, path = "test-pallets/utils" }
pallet-unique = { path = "pallets/unique", default-features = false }
precompile-utils-macro = { default-features = false, path = "runtime/common/ethereum/precompiles/utils/macro" }
struct-versioning = { default-features = false, path = "crates/struct-versioning" }
uc-rpc = { default-features = false, path = "client/rpc" }
unique-rpc = { default-features = false, path = "node/rpc" }
up-common = { path = "primitives/common", default-features = false }
up-data-structs = { path = "primitives/data-structs", default-features = false }
up-pov-estimate-rpc = { path = "primitives/pov-estimate-rpc", default-features = false }
up-rpc = { path = "primitives/rpc", default-features = false }
up-sponsorship = { default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "v20241016" }

# Unique: Runtimes
opal-runtime = { path = "runtime/opal" }
quartz-runtime = { path = "runtime/quartz" }
unique-runtime = { path = "runtime/unique" }

# Frontier (Unique patches over the Parity version)
fc-api = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fc-consensus = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fc-db = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fc-mapping-sync = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fc-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fc-rpc-core = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fp-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fp-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fp-self-contained = { default-features = false, features = [
	"serde",
], git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
fp-storage = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
pallet-base-fee = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
pallet-ethereum = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "v20241016" }

# Parity
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.6.5" }
cumulus-client-cli = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-client-collator = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-client-consensus-aura = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-client-consensus-common = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-client-consensus-proposer = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-client-network = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-client-parachain-inherent = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-client-service = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-pallet-aura-ext = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-pallet-dmp-queue = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-pallet-parachain-system = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-pallet-xcm = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-pallet-xcmp-queue = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-primitives-aura = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-primitives-core = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-primitives-parachain-inherent = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-primitives-timestamp = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-primitives-utility = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-relay-chain-interface = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-relay-chain-minimal-node = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
cumulus-test-relay-sproof-builder = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
frame-executive = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
frame-metadata-hash-extension = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
frame-support = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
frame-system = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-aura = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-authorship = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-balances = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-collective = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-democracy = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-membership = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-message-queue = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-preimage = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-ranked-collective = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-referenda = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-scheduler = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-session = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-state-trie-migration = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-sudo = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-timestamp = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-transaction-payment-rpc = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-treasury = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-utility = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
pallet-xcm = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
parachains-common = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
parity-scale-codec = { version = "3.6.5", features = ["derive"], default-features = false }
polkadot-cli = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
polkadot-parachain-primitives = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
polkadot-primitives = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
polkadot-runtime-common = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
polkadot-service = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-basic-authorship = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-chain-spec = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-cli = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-client-api = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-consensus = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-consensus-manual-seal = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-executor = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-network = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-network-sync = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-rpc = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-rpc-api = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-service = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-sysinfo = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-telemetry = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-tracing = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sc-transaction-pool = { git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-arithmetic = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-block-builder = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-blockchain = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-consensus-aura = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-core = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-externalities = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-genesis-builder = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-inherents = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-io = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-keystore = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-offchain = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-runtime = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-session = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-staking = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-state-machine = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-std = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-storage = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-timestamp = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-tracing = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-transaction-pool = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-trie = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-version = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
sp-weights = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
staging-parachain-info = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
staging-xcm = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
staging-xcm-builder = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
staging-xcm-executor = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
substrate-prometheus-endpoint = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }

# Parity: Build utils
substrate-build-script-utils = { git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
substrate-wasm-builder = { git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }

# Parity: Benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
frame-benchmarking-cli = { git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }

# Parity: Try Runtime
frame-try-runtime = { default-features = false, git = "https://github.com/UniqueNetwork/polkadot-sdk", branch = "v20241016" }

# ORML
orml-traits = { default-features = false, git = "https://github.com/UniqueNetwork/open-runtime-module-library.git", branch = "v20241016" }
orml-vesting = { default-features = false, git = "https://github.com/UniqueNetwork/open-runtime-module-library.git", branch = "v20241016" }
orml-xcm-support = { default-features = false, git = "https://github.com/UniqueNetwork/open-runtime-module-library.git", branch = "v20241016" }
orml-xtokens = { default-features = false, git = "https://github.com/UniqueNetwork/open-runtime-module-library.git", branch = "v20241016" }

# Other
derivative = { default-features = false, version = "2.2.0", features = ["use_core"] }
ethereum = { version = "0.15.0", default-features = false, features = ["with-codec"] }
evm-core = { version = "0.41.0", default-features = false }
hex-literal = "0.4.1"
impl-trait-for-tuples = "0.2.2"
jsonrpsee = { version = "0.24.3", features = ["macros", "server"] }
log = { version = "0.4.20", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
serde = { default-features = false, features = ['derive'], version = "1.0.188" }
serde_json = "1"
smallvec = "1.11.1"
